# dotfiles

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  TODO.md  install.sh
dotfiles/: .bash_aliases  .bash_aliases.sh  .bash_functions  .bash_functions.sh  .bashrc  .gitconfig  .gitignore  .tmux.conf  .tmux_statusbar.sh  .vscode.json  .vscode_extensions.txt
dotfiles/bash/: aliases.sh  asdf.sh  direnv.sh  functions.sh  golang.sh  nvm.sh  options.sh  profile.sh  prompt.sh  python.sh  rc.sh  rust.sh  ssh.sh
dotfiles/direnv/: rc.sh
dotfiles/git/: config.ini  ignore
dotfiles/tmux/: conf  config.tmux  statusbar.sh
dotfiles/vscode/: config.json  extensions.txt
howto/: aws.md  bash.md  digital_ocean_kubernetes.md  direnv.md  docker.md  git.md  graphviz.md  install_fonts.md  list_pydantic_models.md  markdown.md  mysql.md  obs.md  poetry.md  postgresql.md  proxy.md  slack.md  slow_qt_programs.md  sound.md  tmux.md
tools/: .env.sample  global_git_status.sh  grep_all_todo.sh  install.sh  list_all_todo.sh  manage.py  pyproject.toml  requirements.txt  statusbar_conf.json.default  statusbar_conf.json.example
tools/commands/: check_dependencies.py  csvcut.py  daily_notes.py  find_missing_init.py  global_git.py  highlight.py  meeting_notes.py  merge_requests.py  statusbar.py  tmux_broadcast.py  tmux_statusbar.py  vscode_extensions.py
tools/helpers/: cache.py  color.py  command.py  path.py  tables.py  web.py
